--- a/ApiMto/ApiMto.csproj
+++ b/ApiMto/ApiMto.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\DataSheet\" />
+  </ItemGroup>
+
 </Project>
